--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,11 @@ flutter:
   #  - images/a_dot_ham.jpeg
   
   assets: 
-    - assets/background.jpg
-    - assets/fond.gif
+    - assets/images/background.jpg
+    - assets/images/sexe/woman_black.png
+    - assets/images/sexe/woman_silver.png
+    - assets/images/sexe/woman_white.png
+    - assets/images/sexe/man_silver.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -59,3 +62,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies, 
   # see https://flutter.io/custom-fonts/#from-packages
+  fonts:
+    - family: Hoodson
+      fonts:
+        - asset: assets/fonts/Hoodson-Regular.ttf
+    - family: Pacifico
+      fonts:
+        - asset: assets/fonts/Pacifico-Regular.ttf
